# lotto

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
.github/workflows/: python-app.yml
src/: __init__.py  app.py  cli.py  generators.py  main.py  math.py  tools.py
src/scripts/: draw.py
src/templates/: index.html
tests/: test.py  test_cli.py  test_main.py
