[tool.poetry]
name = "lotto"
version = "0.1.0"
description = ""
authors = ["Nikolai Gordienko <nicolas.gordienko@gmail.com>"]
readme = "README.md"
packages = [
  { include = "src" },
]

[tool.poetry.dependencies]
python = ">=3.8.1"
flask = "^2.3.2"
flask-wtf = "^1.1.1"
wtforms = "^3.0.1"
gunicorn = "^20.1.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
flask-testing = "^0.8.1"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
lotto = "src.scripts.draw:main"